test/negative/406_ref_pattern_nonref.fx
// expect: reference
val x = match 5 { | ref y => 1 | _ => 0 }
println(x)
